# feed-comparison

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_feed.yml
.github/workflows/: ci.yml  codeql.yml
src/feed_comparison/: __init__.py  settings.py
src/feed_comparison/cli/: _logging.py  about.py  app.py  banner.py  compare.py  download.py  list_feeds.py  plot.py
src/feed_comparison/feeds/: __init__.py  _http.py  base.py  ermes.py  misp.py  phishstats.py  phishtank.py  registry.py  url_scan.py
src/feed_comparison/utils/: canonicalize.py  normalize.py  plot_style.py  plots.py  text.py  time.py
tests/: conftest.py  test_canonicalize.py  test_settings.py
tests/cli/: test_about.py  test_banner.py  test_download.py  test_list_feeds.py  test_logging.py
tests/data/: canonicalize_cases.json
tests/feeds/: test_ermes.py  test_http.py  test_phishstats.py  test_phishtank.py  test_registry.py  test_url_scan.py
tests/utils/: test_normalize.py  test_plot_style.py  test_plots.py  test_text.py  test_time.py
