[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "feed-comparison"
description = "A reproducible CLI to compare and benchmark malicious-URL threat intelligence feeds."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Ermes Cyber Security S.p.A.", email = "info@ermes.company" },
]
maintainers = [
    { name = "Stefano Traverso" },
]
keywords = [
    "threat-intelligence",
    "malicious-urls",
    "phishing",
    "feed-comparison",
    "cyber-threat-intelligence",
    "ai4cti",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dynamic = ["version"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "pandas>=2.2,<3",
    "pandarallel>=1.6",
    "tldextract>=5.1",
    "idna>=3.6",
    "matplotlib>=3.8",
    "supervenn>=0.5",
    "scipy>=1.11",
    "fastplot>=1.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
misp = ["pymisp>=2.4"]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "pre-commit>=3.7",
    "types-requests>=2.31",
]

[project.scripts]
feed-comparison = "feed_comparison.cli.app:app"

[project.urls]
Homepage = "https://github.com/AI4CTI/feed-comparison"
Repository = "https://github.com/AI4CTI/feed-comparison"
Issues = "https://github.com/AI4CTI/feed-comparison/issues"
Changelog = "https://github.com/AI4CTI/feed-comparison/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/feed_comparison/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/feed_comparison"]

[tool.hatch.build.targets.sdist]
include = [
    "src/feed_comparison",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
# Typer canonical pattern: default values built by `typer.Option(...)`.
"src/feed_comparison/cli/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/feed_comparison"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["feed_comparison"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
